# webdriver-client-api

./: .gitignore  LICENSE  README.md
webdriver_client_api/: Cargo.toml
webdriver_client_api/src/: httpdecorator.rs  lib.rs  structs.rs  traits.rs
webdriver_client_api_simple_http/: Cargo.toml
webdriver_client_api_simple_http/src/: lib.rs
webdriver_client_api_simple_impl/: Cargo.toml
webdriver_client_api_simple_impl/src/: lib.rs
