[package]
name = "webdriver_client_api"
version = "0.1.0"
description = "Interface to interact with the W3C WebDriver API"
authors = ["Nail Khanipov <foxflameless@gmail.com>"]
repository = "https://github.com/DarkWeird/webdriver-client-api"
keywords = ["webdriver"]
edition = "2018"

[dependencies]
serde_json="^1"
serde_derive="^1"
serde="^1"


