[package]
name = "webdriver_client_api_simplehttp"
version = "0.1.0"
description = "Simple and naive http backend implementation for usage the webdriver_client_api"
authors = ["Nail Khanipov <foxflameless@gmail.com>"]
repository = "https://github.com/DarkWeird/webdriver-client-api"
edition = "2018"

[dependencies]
log = "0.4"
serde = "^1"
serde_json = "^1"
ureq = { version = "^0.6", features = ["json","charset"] }
webdriver_client_api = {version="0.1.0", path="../webdriver_client_api"}