[package]
name = "webdriver_client_api_simple_impl"
version = "0.1.0"
description = "Simple and naive  client library implementation for usage the webdriver_client_api"
authors = ["Nail Khanipov <foxflameless@gmail.com"]
repository = "https://github.com/DarkWeird/webdriver-client-api"
edition = "2018"

[dependencies]
log ="0.4"
serde_json="^1"
webdriver_client_api = {version="0.1.0", path="../webdriver_client_api"}